--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.50</version>
         </dependency>
+        <!-- 引入jwt-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.8.2</version>
+        </dependency>
     </dependencies>
 
     <build>
