--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,4 +1,30 @@
 server:
   port: 8080
+spring:
+  data:
+    redis:
+      host: 10.10.30.205
+      port: 6379
+      database: 5
+jwt:
+  key: mfo32kt6r
+  expire: 3
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  info:
+    env:
+      enabled: true
+    os:
+      enabled: true
+    java:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
+    env:
+      show-values: always
 
 
