--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,9 +3,14 @@ server:
 spring:
   data:
     redis:
-      host: 10.10.30.205
+      host: 127.0.0.1
       port: 6379
       database: 5
+  datasource:
+    url: jdbc:mysql://localhost:8080/test
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 jwt:
   key: mfo32kt6r
   expire: 3
