--- a/payment-merchant/src/main/resources/application-prod.yml
+++ b/payment-merchant/src/main/resources/application-prod.yml
@@ -1,15 +1,15 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   data:
     redis:
-      host: 10.10.30.205
+      host: 127.0.0.1
       port: 6379
       database: 5
   datasource:
-    url: jdbc:mysql://123.249.6.121:28756/test?useUnicode=true&charset=utf8mb4&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:8080/test
     username: root
-    password: mariadbwzy@2024
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 jwt:
   key: mfo32kt6r
@@ -31,5 +31,3 @@ management:
       show-details: always
     env:
       show-values: always
-
-
