--- a/payment-platform/package.json
+++ b/payment-platform/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.2",
+    "element-plus": "^2.9.0",
+    "payment-managementplatform": "file:",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
